added scheme, fixed distribution rule in automake

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,3 @@
 SUBDIRS = src
 dist_doc_DATA = AUTHORS ChangeLog NEWS README COPYING
+EXTRA_DIST = docs/stations.m3u scripts/radioberry.conf scripts/start_radioberry.sh scheme/scheme_A_20130901.pdf scheme/scheme.sch
